@@ -11,7 +11,8 @@ For a more comprehensive changelog for the latest experimental CVS code, see:
 - Adlib GM emulation table revamped, providing more accurate software MIDI
 - Added full and partial sound looping to Zak McKracken FmTowns
 - Default Makefile now uses configure script, old one is Makefile.noconf
-- Improved compression of Indy4 - Fate of Atlantis and Simon the Sorcerer 2 sound files
+- Improved compression of Fate of Atlantis and Simon the Sorcerer 2 sound files
+- Keyboard fighting in Fate of Atlantis now works
 
 0.5.1 (2003-08-06) 
 - Rewrote Beneath a Steel Sky savegame code (see note in READMEs 'Known Bugs')
